--- a/docs/component/db/index.html
+++ b/docs/component/db/index.html
@@ -137,7 +137,7 @@ db:
             </article>
         </div>
         <footer>
-             AJ-IAM，开源框架 <a href="https://framework.ajaxjs.com" target="_blank">AJ-Framework</a> 的一部分。联系方式：
+             开源框架 <a href="https://framework.ajaxjs.com" target="_blank">AJ-Framework</a> 首页。联系方式：
              frank@ajaxjs.com，<a href="https://blog.csdn.net/zhangxin09" target="_blank">作者博客</a>
              <br />
              <br />
