--- a/docs/component/bean-validator/index.html
+++ b/docs/component/bean-validator/index.html
@@ -11,9 +11,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap&family=Noto+Sans+SC:wght@100..900&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" /> 
-        <link rel="stylesheet" href="/asset/style/main.css"/>
+        <link rel="stylesheet" href="/asset/main.css"/>
         <link rel="icon" type="image/x-icon" href="/asset/logo.ico"/>
-        <script src="/asset/common.js"></script>
+        <script src="https://framework.ajaxjs.com/static/aj-docs/common.js"></script>
         <script>
             var _hmt = _hmt || [];
             (function() {
@@ -188,7 +188,7 @@ public @interface IdCard {
 }
 </code></pre>
 <p>然后在枚举类 <code>ValidatorEnum</code> 中增加具体的校验方法，如果不通过就抛出 <code>ValidatorException</code> 异常。</p>
-<p><img src="../../../asset/aj-docs/bean-v.png" alt="Bean Validation"></p>
+<p><img src="../../../imgs/bean-v.png" alt="Bean Validation"></p>
 <p>至此就完成了自定义注解的定义。</p>
 <h2>原理分析</h2>
 <p>有关原理的分析，请移步至博客文章：↗ <a href="https://zhangxin.blog.csdn.net/article/details/132255031">CSDN 博客文章</a>。</p>
