--- a/docs/component/lite-c/index.html
+++ b/docs/component/lite-c/index.html
@@ -11,9 +11,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap&family=Noto+Sans+SC:wght@100..900&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" /> 
-        <link rel="stylesheet" href="/asset/style/main.css"/>
+        <link rel="stylesheet" href="/asset/main.css"/>
         <link rel="icon" type="image/x-icon" href="/asset/logo.ico"/>
-        <script src="/asset/common.js"></script>
+        <script src="https://framework.ajaxjs.com/static/aj-docs/common.js"></script>
         <script>
             var _hmt = _hmt || [];
             (function() {
@@ -1250,8 +1250,8 @@ public class TestCache {
 }
 
 </code></pre>
-<p><img src="https://i-blog.csdnimg.cn/direct/5a4f0612e3be42bab45d4f98076c6070.png" alt="在这里插入图片描述">
-可见第二次执行的时候，命中了缓存。</p>
+<p><img src="/imgs/cache/spring-cache.png" alt="在这里插入图片描述"></p>
+<p>可见第二次执行的时候，命中了缓存。</p>
 <p>Spring Cache 还有其他强大的用法，这里就不展开介绍了。</p>
 <h1>二级缓存</h1>
 <p>这个实现起来比较复杂，另文再述。</p>
