--- a/docs/component/lite-c/index.html
+++ b/docs/component/lite-c/index.html
@@ -11,7 +11,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap&family=Noto+Sans+SC:wght@100..900&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" /> 
-        <link rel="stylesheet" href="/asset/main.css"/>
+        <link rel="stylesheet" href="https://framework.ajaxjs.com/static/new-ui/css/common.css" />
+        <link rel="stylesheet" href="https://iam.ajaxjs.com/asset/main.css"/>
         <link rel="icon" type="image/x-icon" href="https://framework.ajaxjs.com/aj-logo/logo.ico"/>
         <script src="https://framework.ajaxjs.com/static/aj-docs/common.js"></script>
         <script>
@@ -92,7 +93,7 @@
                     <li><a href="/common/contact">联系</a></li>
                 </ul>
             </menu>
-            <article>
+            <article class="aj-text chinese">
                 <h1>设计目标</h1>
 <p>基于 Java 本地的缓存，而不是 Redis 的分布式缓存。它应该满足以下的设计：</p>
 <ul>
