--- a/docs/component/security/index.html
+++ b/docs/component/security/index.html
@@ -11,7 +11,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap&family=Noto+Sans+SC:wght@100..900&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" /> 
-        <link rel="stylesheet" href="/asset/main.css"/>
+        <link rel="stylesheet" href="https://framework.ajaxjs.com/static/new-ui/css/common.css" />
+        <link rel="stylesheet" href="https://iam.ajaxjs.com/asset/main.css"/>
         <link rel="icon" type="image/x-icon" href="https://framework.ajaxjs.com/aj-logo/logo.ico"/>
         <script src="https://framework.ajaxjs.com/static/aj-docs/common.js"></script>
         <script>
@@ -92,7 +93,7 @@
                     <li><a href="/common/contact">联系</a></li>
                 </ul>
             </menu>
-            <article>
+            <article class="aj-text chinese">
                 <h1>用户系统</h1>
 <p>用户管理、单点登录、权限管理，请参阅独立的组件 AJ-IAM：<a href="https://iam.ajaxjs.com">https://iam.ajaxjs.com</a>。</p>
 <h1>安全组件</h1>
